--- a/app/scss/global/_resets.scss
+++ b/app/scss/global/_resets.scss
@@ -10,6 +10,10 @@ html {
     box-sizing: inherit;
 }
 
+h1, h2, h3 {
+    margin-top: 0;
+}
+
 body {
     font-family: 'Public Sans', sans-serif;
     font-size: v.$font-med;
@@ -24,22 +28,57 @@ a, a:visited, a:hover {
     text-decoration: none;
 }
 
+.container {
+    padding-block: 2.25rem;
+    padding-inline: 1.5rem;
+}
+
+// FLEXBOX
+.flex {
+    display: flex;
+
+    &-jc-sb {
+        justify-content: space-between;
+    }
+
+    &-jc-c {
+        justify-content: center;
+    }
+
+    &-ai-c {
+        align-items: center;
+    }
+}
+
 
 // BUTTONS
 button, .button {
+    display: inline-block;
     padding: 0.875rem 2.1875rem;
     border-radius: 50px;
+    font-size: v.$font-sm;
     font-weight: 400;
     background: linear-gradient(to right, v.$limeGreen, v.$brightCyan);
     color: v.$white;
     outline: none;
     border: none;
     cursor: pointer;
+    transition: opacity 300ms ease-in-out;
+
+    &:hover {
+        opacity: 0.75;
+    }
 }
 
 // VISIBILITY 
 .hide-for-mobile {
     @include breakpoints-down(medium) {
+        display: none;
+    }
+}
+
+.hide-for-tablet {
+    @include breakpoints-down(small) {
         display: none;
     }
 }
