--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -1,4 +1,5 @@
 @use '../variables/' as v;
+@use '../animations/' as *;
 
 // FLEXBOX
 .flex {
@@ -19,8 +20,45 @@
 
 .header {
 
+    &.open {
+        .overlay {
+            display: block;
+            animation: fade-in 300ms ease-in-out forwards;
+            z-index: 10;
+        }
+
+        .header__hamburger {
+            
+            > span:first-child {
+                transform: rotate(45deg);
+            }
+
+            > span:nth-child(2) {  
+                opacity: 0;
+            }
+        
+            > span:last-child {
+                transform: rotate(-45deg);
+            }
+        }
+
+        
+    }
+
+    .overlay {
+        display: none;
+        position: fixed;
+        opacity: 0;
+        top: 3.95rem;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(v.$darkBlue, transparent);
+        animation: fade-out 300ms ease-in-out forwards;
+    }
+
     #nav-container {
-        padding: 24px;
+        padding: 1.0625rem 1.5rem;
     }
 
     &__logo {
@@ -32,6 +70,10 @@
 
     }
 
+    .hamburger-container {
+        cursor: pointer;
+    }
+
     &__hamburger { //FOR MOBILE MENU 
         
         > span {
@@ -39,6 +81,8 @@
             width: 26px;
             height: 2px;
             background-color: v.$darkBlue;
+            transform-origin: 6px ;
+            transition: all 300ms ease-in-out;
 
             &:not(:last-child) {
                 margin-bottom: 3px;
@@ -79,17 +123,6 @@
                     opacity: 1;
                 }
             }
-        }
-    }
-
-    &__cta {
-        font-size: v.$font-sm;
-        color: v.$white;
-        font-weight: 400;
-        transition: opacity 300ms ease-in-out;
-
-        &:hover {
-            opacity: 0.75;
         }
     }
 }
