--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ html {
   box-sizing: inherit;
 }
 
+h1, h2, h3 {
+  margin-top: 0;
+}
+
 body {
   font-family: "Public Sans", sans-serif;
   font-size: 1.125rem;
@@ -21,27 +25,9 @@ a, a:visited, a:hover {
   text-decoration: none;
 }
 
-button, .button {
-  padding: 0.875rem 2.1875rem;
-  border-radius: 50px;
-  font-weight: 400;
-  background: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
-  color: hsl(0deg, 0%, 100%);
-  outline: none;
-  border: none;
-  cursor: pointer;
-}
-
-@media (max-width: 63.9375em) {
-  .hide-for-mobile {
-    display: none;
-  }
-}
-
-@media (min-width: 40em) {
-  .hide-for-desktop {
-    display: none;
-  }
+.container {
+  padding-block: 2.25rem;
+  padding-inline: 1.5rem;
 }
 
 .flex {
@@ -57,18 +43,135 @@ button, .button {
   align-items: center;
 }
 
+button, .button {
+  display: inline-block;
+  padding: 0.875rem 2.1875rem;
+  border-radius: 50px;
+  font-size: 0.875rem;
+  font-weight: 400;
+  background: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
+  color: hsl(0deg, 0%, 100%);
+  outline: none;
+  border: none;
+  cursor: pointer;
+  transition: opacity 300ms ease-in-out;
+}
+button:hover, .button:hover {
+  opacity: 0.75;
+}
+
+@media (max-width: 63.9375em) {
+  .hide-for-mobile {
+    display: none;
+  }
+}
+
+@media (max-width: 50.6875em) {
+  .hide-for-tablet {
+    display: none;
+  }
+}
+
+@media (min-width: 50.6875em) {
+  .hide-for-desktop {
+    display: none;
+  }
+}
+
+@-webkit-keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+@keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+.flex {
+  display: flex;
+}
+.flex-jc-sb {
+  justify-content: space-between;
+}
+.flex-jc-c {
+  justify-content: center;
+}
+.flex-ai-c {
+  align-items: center;
+}
+
+.header.open .overlay {
+  display: block;
+  -webkit-animation: fade-in 300ms ease-in-out forwards;
+          animation: fade-in 300ms ease-in-out forwards;
+  z-index: 10;
+}
+.header.open .header__hamburger > span:first-child {
+  transform: rotate(45deg);
+}
+.header.open .header__hamburger > span:nth-child(2) {
+  opacity: 0;
+}
+.header.open .header__hamburger > span:last-child {
+  transform: rotate(-45deg);
+}
+.header .overlay {
+  display: none;
+  position: fixed;
+  opacity: 0;
+  top: 3.95rem;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(hsl(233deg, 26%, 24%), transparent);
+  -webkit-animation: fade-out 300ms ease-in-out forwards;
+          animation: fade-out 300ms ease-in-out forwards;
+}
 .header #nav-container {
-  padding: 24px;
+  padding: 1.0625rem 1.5rem;
 }
 .header__logo img {
   width: 8.8125rem;
   height: 1.375rem;
+}
+.header .hamburger-container {
+  cursor: pointer;
 }
 .header__hamburger > span {
   display: block;
   width: 26px;
   height: 2px;
   background-color: hsl(233deg, 26%, 24%);
+  transform-origin: 6px;
+  transition: all 300ms ease-in-out;
 }
 .header__hamburger > span:not(:last-child) {
   margin-bottom: 3px;
@@ -100,12 +203,36 @@ button, .button {
 .header__links-container a:hover::before {
   opacity: 1;
 }
-.header__cta {
-  font-size: 0.875rem;
-  color: hsl(0deg, 0%, 100%);
-  font-weight: 400;
-  transition: opacity 300ms ease-in-out;
+
+.hero__image {
+  position: relative;
+  background-image: url("/images/bg-intro-mobile.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 17.5rem;
 }
-.header__cta:hover {
-  opacity: 0.75;
+.hero__image::before {
+  content: "";
+  position: absolute;
+  background-image: url("/images/image-mockups.png");
+  background-size: 90%;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  height: 100%;
+  width: 100%;
+}
+.hero__text {
+  text-align: center;
+}
+.hero__text h1 {
+  font-weight: 300;
+  font-size: 2.31rem;
+  line-height: 1.15;
+  margin-bottom: 1.5rem;
+  color: hsl(233deg, 26%, 24%);
+}
+.hero__text p {
+  line-height: 1.5;
+  margin-bottom: 2.25rem;
 }/*# sourceMappingURL=style.css.map */
