--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,12 @@ button:hover, .button:hover {
   opacity: 1;
 }
 
+@media (min-width: 64em) {
+  .hero {
+    display: flex;
+    align-items: center;
+  }
+}
 .hero__image {
   position: relative;
   background-image: url("/images/bg-intro-mobile.svg");
@@ -211,6 +217,14 @@ button:hover, .button:hover {
   background-repeat: no-repeat;
   background-position: center center;
   min-height: 17.5rem;
+}
+@media (min-width: 64em) {
+  .hero__image {
+    flex: 1;
+    order: 2;
+    height: 41rem;
+    background-image: url("/images/bg-intro-desktop.svg");
+  }
 }
 .hero__image::before {
   content: "";
@@ -224,6 +238,12 @@ button:hover, .button:hover {
 }
 .hero__text {
   text-align: center;
+}
+@media (min-width: 64em) {
+  .hero__text {
+    flex: 1;
+    order: 1;
+  }
 }
 .hero__text h1 {
   font-weight: 300;
