--- a/app/scss/layout/_hero.scss
+++ b/app/scss/layout/_hero.scss
@@ -1,6 +1,12 @@
 @use '../variables/' as v;
+@use '../mixins/' as *;
 
 .hero {
+    @include breakpoints-up(large) {
+        display: flex;
+        align-items: center ;
+    }
+
     &__image {
         position: relative;
         background-image: url('/images/bg-intro-mobile.svg');
@@ -8,6 +14,12 @@
         background-repeat: no-repeat;
         background-position: center center;
         min-height: 17.5rem;
+        @include breakpoints-up(large) {
+            flex: 1;
+            order: 2;    
+            height: 41rem;
+            background-image: url('/images/bg-intro-desktop.svg') ;
+        }
 
         &::before {
             content: "";
@@ -23,7 +35,11 @@
 
     &__text {
         text-align: center;
-
+        @include breakpoints-up(large) {
+            flex: 1;
+            order: 1;       
+        }
+        
         h1 {
         font-weight: 300;
         font-size: 2.31rem;
