--- a/app/scss/global/_resets.scss
+++ b/app/scss/global/_resets.scss
@@ -22,6 +22,10 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.3;
+
+    @include breakpoints-up(large) {
+        font-size: v.$font-med;
+    }
 }
 
 a, a:visited, a:hover {
@@ -29,8 +33,29 @@ a, a:visited, a:hover {
 }
 
 .container {
-    padding-block: 2.25rem;
-    padding-inline: 1.5rem;
+
+    max-width: 1113px;
+    margin: auto;
+
+    &--px {
+        padding-inline: 1.5rem;
+    }
+    &--py {
+        padding-block: 2.25rem;
+    }
+
+    &--pl {
+        padding-left: 1.5rem;
+    }
+    &--pr {
+        padding-right: 1.5rem;
+    }
+    &--pt {
+        padding-top: 2.25rem;
+    }
+    &--pb {
+        padding-bottom: 2.25rem;
+    }
 }
 
 // FLEXBOX
