--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,37 @@ body {
   padding: 0;
   line-height: 1.3;
 }
+@media (min-width: 64em) {
+  body {
+    font-size: 1.125rem;
+  }
+}
 
 a, a:visited, a:hover {
   text-decoration: none;
 }
 
 .container {
-  padding-block: 2.25rem;
+  max-width: 1113px;
+  margin: auto;
+}
+.container--px {
   padding-inline: 1.5rem;
+}
+.container--py {
+  padding-block: 2.25rem;
+}
+.container--pl {
+  padding-left: 1.5rem;
+}
+.container--pr {
+  padding-right: 1.5rem;
+}
+.container--pt {
+  padding-top: 2.25rem;
+}
+.container--pb {
+  padding-bottom: 2.25rem;
 }
 
 .flex {
@@ -128,6 +151,11 @@ button:hover, .button:hover {
   align-items: center;
 }
 
+.header {
+  max-width: 69.5625rem;
+  margin: 0 auto;
+  z-index: 10;
+}
 .header.open .overlay {
   display: block;
   -webkit-animation: fade-in 300ms ease-in-out forwards;
@@ -147,7 +175,7 @@ button:hover, .button:hover {
   display: none;
   position: fixed;
   opacity: 0;
-  top: 3.95rem;
+  top: 3.84rem;
   right: 0;
   bottom: 0;
   left: 0;
@@ -204,10 +232,15 @@ button:hover, .button:hover {
   opacity: 1;
 }
 
+.hero {
+  background-color: hsl(0deg, 0%, 98%);
+}
 @media (min-width: 64em) {
   .hero {
     display: flex;
     align-items: center;
+    max-width: 90.5rem;
+    margin: auto;
   }
 }
 .hero__image {
@@ -224,6 +257,8 @@ button:hover, .button:hover {
     order: 2;
     height: 41rem;
     background-image: url("/images/bg-intro-desktop.svg");
+    background-position: -0.8125rem -12.5rem;
+    background-size: 150%;
   }
 }
 .hero__image::before {
@@ -236,6 +271,12 @@ button:hover, .button:hover {
   height: 100%;
   width: 100%;
 }
+@media (min-width: 64em) {
+  .hero__image::before {
+    background-size: 100%;
+    left: 18%;
+  }
+}
 .hero__text {
   text-align: center;
 }
@@ -243,6 +284,8 @@ button:hover, .button:hover {
   .hero__text {
     flex: 1;
     order: 1;
+    text-align: left;
+    padding-left: 11.875rem;
   }
 }
 .hero__text h1 {
@@ -251,6 +294,11 @@ button:hover, .button:hover {
   line-height: 1.15;
   margin-bottom: 1.5rem;
   color: hsl(233deg, 26%, 24%);
+}
+@media (min-width: 64em) {
+  .hero__text h1 {
+    font-size: 3.25rem;
+  }
 }
 .hero__text p {
   line-height: 1.5;
